--- a/.github/workflows/get_v2.yaml
+++ b/.github/workflows/get_v2.yaml
@@ -28,14 +28,18 @@ jobs:
           git config --global user.name "$username"
           git config --global user.email "$email"
       - name: 设置SSH私钥信息
-        env:
-          token_Private_Keys: ${{ secrets.token_Private_Keys }}
-        run: |
-          mkdir -p ~/.ssh/
-          echo "$token_Private_Keys" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          eval "$(ssh-agent -s)"
-          ssh-add ~/.ssh/id_rsa
+        uses: webfactory/ssh-agent@v0.4.1
+        with:
+          ssh-private-key: ${{ secrets.token_Private_Keys }}
+      # - name: 设置SSH私钥信息
+      #   env:
+      #     token_Private_Keys: ${{ secrets.token_Private_Keys }}
+      #   run: |
+      #     mkdir -p ~/.ssh/
+      #     echo "$token_Private_Keys" > ~/.ssh/id_rsa
+      #     chmod 600 ~/.ssh/id_rsa
+      #     eval "$(ssh-agent -s)"
+      #     ssh-add ~/.ssh/id_rsa
       - name: 获取订阅
         run: |
           python3 get_clash.py
