--- a/.github/workflows/get_v2.yaml
+++ b/.github/workflows/get_v2.yaml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          repository: git@github.com:ronghuaxueleng/get_v2.git
       - name: 'Set up Python'
         uses: actions/setup-python@v1
         with:
