--- a/.github/workflows/get_v2.yaml
+++ b/.github/workflows/get_v2.yaml
@@ -11,15 +11,19 @@ jobs:
   get_v2ray:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: 设置SSH私钥信息
+        uses: webfactory/ssh-agent@v0.4.1
+        with:
+          ssh-private-key: ${{ secrets.token_Private_Keys }}
+      - name: 检出代码
         uses: actions/checkout@v2
         with:
           repository: git@github.com:ronghuaxueleng/get_v2.git
-      - name: 'Set up Python'
+      - name: '安装python环境'
         uses: actions/setup-python@v1
         with:
           python-version: 3.7
-      - name: 'Install requests'
+      - name: '安装依赖'
         run: |
           pip install -r requirements.txt
       - name: 设置githup信息
@@ -29,10 +33,6 @@ jobs:
         run: |
           git config --global user.name "$username"
           git config --global user.email "$email"
-      - name: 设置SSH私钥信息
-        uses: webfactory/ssh-agent@v0.4.1
-        with:
-          ssh-private-key: ${{ secrets.token_Private_Keys }}
       # - name: 设置SSH私钥信息
       #   env:
       #     token_Private_Keys: ${{ secrets.token_Private_Keys }}
