--- a/pub/bhqz.yaml
+++ b/pub/bhqz.yaml
@@ -6,51 +6,38 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies: []
 proxy-groups:
-  - name: 🔰 节点选择
+  - name: PROXY
     type: select
     proxies:
-      - ♻️ 自动选择
-      - 🎯 全球直连
-  - name: ♻️ 自动选择
-    type: url-test
-    url: http://www.gstatic.com/generate_204
-    interval: 300
-    proxies: []
-  - name: 🌍 国外媒体
-    type: select
-    proxies:
-      - 🔰 节点选择
-      - ♻️ 自动选择
-      - 🎯 全球直连
-  - name: 🌏 国内媒体
-    type: select
-    proxies:
-      - 🎯 全球直连
-      - 🔰 节点选择
-  - name: 📲 电报信息
-    type: select
-    proxies:
-      - 🔰 节点选择
-      - 🎯 全球直连
-  - name: 🍎 苹果服务
-    type: select
-    proxies:
-      - 🔰 节点选择
-      - 🎯 全球直连
-      - ♻️ 自动选择
-  - name: 🎯 全球直连
-    type: select
-    proxies:
+      - URL-TEST
+      - LOAD-BALANCE
+      - SELECT
       - DIRECT
-  - name: 🛑 全球拦截
+  - name: OTHER
+    type: select
+    proxies:
+      - PROXY
+      - DIRECT
+  - name: AD
     type: select
     proxies:
       - REJECT
       - DIRECT
-  - name: 🐟 漏网之鱼
+      - PROXY
+  - name: URL-TEST
+    type: url-test
+    url: http://www.gstatic.com/generate_204
+    interval: 600
+    lazy: true
+    tolerance: 100
+    proxies: []
+  - name: LOAD-BALANCE
+    type: load-balance
+    url: http://www.gstatic.com/generate_204
+    interval: 600
+    proxies: []
+  - name: SELECT
     type: select
-    proxies:
-      - 🔰 节点选择
-      - 🎯 全球直连
-      - ♻️ 自动选择
+    proxies: []
 rules: []
+mixed-port: 7890
