--- a/pub/jiang.yaml
+++ b/pub/jiang.yaml
@@ -5,197 +5,197 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 二爷翻墙 节点_1, server: cf-lt.sharecentre.online, port: 443, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /shirker, headers: {Host: nl.sharecentrepro.com}}}
-  - {name: 二爷翻墙 节点_2, server: cf-lt.sharecentre.online, port: 443, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /shirker, headers: {Host: sw.sharecentrepro.com}}}
-  - {name: 二爷翻墙 节点_3, server: cf-lt.sharecentre.online, port: 443, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /shirker, headers: {Host: in.sharecentrepro.com}}}
-  - {name: 二爷翻墙 节点_4, server: cf-lt.sharecentre.online, port: 443, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /shirker, headers: {Host: gcore.ilovescp.com}}}
-  - {name: 二爷翻墙 节点_5, server: cf-lt.sharecentre.online, port: 443, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /shirker, headers: {Host: do.sharecentrepro.com}}}
-  - {name: 二爷翻墙 节点_6, server: cf-lt.sharecentre.online, port: 443, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /shirker, headers: {Host: uk1.scproxy.top}}}
-  - {name: 二爷翻墙 节点_7, server: cf-lt.sharecentre.online, port: 443, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /shirker, headers: {Host: hk-hytron.ilovescp.com}}}
-  - {name: 二爷翻墙 节点_8, server: cf-lt.sharecentre.online, port: 443, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /shirker, headers: {Host: ca.ilovescp.com}}}
-  - {name: 二爷翻墙 节点_9, server: cf-lt.sharecentre.online, port: 443, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /shirker, headers: {Host: ny1.sharecentrepro.org}}}
-  - {name: 二爷翻墙 节点_10, server: cf-lt.sharecentre.online, port: 443, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /shirker, headers: {Host: lv1.sharecentrepro.org}}}
-  - {name: 二爷翻墙 节点_11, server: cf-lt.sharecentre.online, port: 443, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /shirker, headers: {Host: lv2.sharecentrepro.org}}}
-  - {name: 二爷翻墙 节点_12, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv3.sharecentrepro.org}}}
-  - {name: 二爷翻墙 节点_13, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp1.scproxy.top}}}
-  - {name: 二爷翻墙 节点_14, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp2.scproxy.top}}}
-  - {name: 二爷翻墙 节点_15, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp3.scproxy.top}}}
-  - {name: 二爷翻墙 节点_16, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp4.scproxy.top}}}
-  - {name: 二爷翻墙 节点_17, server: 1.1808.cf, port: 443, type: vmess, uuid: dddd0b29-1576-4003-9990-d7cea34264db, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /835757, headers: {Host: dedi2.1808.cf}}}
-  - {name: 二爷翻墙 节点_18, server: speed.76898102.xyz, port: 443, type: vmess, uuid: dddd0b29-1576-4003-9990-d7cea34264db, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /835757, headers: {Host: dedi2.1808.cf}}}
-  - {name: 二爷翻墙 节点_19, server: 162.159.152.95, port: 443, type: vmess, uuid: dddd0b29-1576-4003-9990-d7cea34264db, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /835757, headers: {Host: dedi2.1808.cf}}}
+  - {name: 二爷翻墙https://1808.cf 节点_1, server: 1.1808.cf, port: 443, type: vmess, uuid: dddd0b29-1576-4003-9990-d7cea34264db, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /835757, headers: {Host: dedi2.1808.cf}}}
+  - {name: 二爷翻墙https://1808.cf 节点_2, server: speed.76898102.xyz, port: 443, type: vmess, uuid: dddd0b29-1576-4003-9990-d7cea34264db, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /835757, headers: {Host: dedi2.1808.cf}}}
+  - {name: 二爷翻墙https://1808.cf 节点_3, server: 162.159.152.95, port: 443, type: vmess, uuid: dddd0b29-1576-4003-9990-d7cea34264db, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /835757, headers: {Host: dedi2.1808.cf}}}
+  - {name: 二爷翻墙https://1808.cf 节点_4, server: cf-lt.sharecentre.online, port: 443, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /shirker, headers: {Host: ca.ilovescp.com}}}
+  - {name: 二爷翻墙https://1808.cf 节点_5, server: cf-lt.sharecentre.online, port: 443, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /shirker, headers: {Host: hk-hytron.ilovescp.com}}}
+  - {name: 二爷翻墙https://1808.cf 节点_6, server: cf-lt.sharecentre.online, port: 443, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /shirker, headers: {Host: in.sharecentrepro.com}}}
+  - {name: 二爷翻墙https://1808.cf 节点_7, server: cf-lt.sharecentre.online, port: 443, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /shirker, headers: {Host: nl.sharecentrepro.com}}}
+  - {name: 二爷翻墙https://1808.cf 节点_8, server: cf-lt.sharecentre.online, port: 443, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /shirker, headers: {Host: sw.sharecentrepro.com}}}
+  - {name: 二爷翻墙https://1808.cf 节点_9, server: cf-lt.sharecentre.online, port: 443, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /shirker, headers: {Host: do.sharecentrepro.com}}}
+  - {name: 二爷翻墙https://1808.cf 节点_10, server: cf-lt.sharecentre.online, port: 443, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /shirker, headers: {Host: uk1.scproxy.top}}}
+  - {name: 二爷翻墙https://1808.cf 节点_11, server: cf-lt.sharecentre.online, port: 443, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /shirker, headers: {Host: ny1.sharecentrepro.org}}}
+  - {name: 二爷翻墙https://1808.cf 节点_12, server: cf-lt.sharecentre.online, port: 443, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /shirker, headers: {Host: lv1.sharecentrepro.org}}}
+  - {name: 二爷翻墙https://1808.cf 节点_13, server: cf-lt.sharecentre.online, port: 443, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /shirker, headers: {Host: lv2.sharecentrepro.org}}}
+  - {name: 二爷翻墙https://1808.cf 节点_14, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv3.sharecentrepro.org}}}
+  - {name: 二爷翻墙https://1808.cf 节点_15, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp1.scproxy.top}}}
+  - {name: 二爷翻墙https://1808.cf 节点_16, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp2.scproxy.top}}}
+  - {name: 二爷翻墙https://1808.cf 节点_17, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp3.scproxy.top}}}
+  - {name: 二爷翻墙https://1808.cf 节点_18, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp4.scproxy.top}}}
+  - {name: 二爷翻墙https://1808.cf 节点_19, server: cf-lt.sharecentre.online, port: 443, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /shirker, headers: {Host: gcore.ilovescp.com}}}
 proxy-groups:
   - name: 🚀 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - DIRECT
-      - 二爷翻墙 节点_1
-      - 二爷翻墙 节点_2
-      - 二爷翻墙 节点_3
-      - 二爷翻墙 节点_4
-      - 二爷翻墙 节点_5
-      - 二爷翻墙 节点_6
-      - 二爷翻墙 节点_7
-      - 二爷翻墙 节点_8
-      - 二爷翻墙 节点_9
-      - 二爷翻墙 节点_10
-      - 二爷翻墙 节点_11
-      - 二爷翻墙 节点_12
-      - 二爷翻墙 节点_13
-      - 二爷翻墙 节点_14
-      - 二爷翻墙 节点_15
-      - 二爷翻墙 节点_16
-      - 二爷翻墙 节点_17
-      - 二爷翻墙 节点_18
-      - 二爷翻墙 节点_19
+      - 二爷翻墙https://1808.cf 节点_1
+      - 二爷翻墙https://1808.cf 节点_2
+      - 二爷翻墙https://1808.cf 节点_3
+      - 二爷翻墙https://1808.cf 节点_4
+      - 二爷翻墙https://1808.cf 节点_5
+      - 二爷翻墙https://1808.cf 节点_6
+      - 二爷翻墙https://1808.cf 节点_7
+      - 二爷翻墙https://1808.cf 节点_8
+      - 二爷翻墙https://1808.cf 节点_9
+      - 二爷翻墙https://1808.cf 节点_10
+      - 二爷翻墙https://1808.cf 节点_11
+      - 二爷翻墙https://1808.cf 节点_12
+      - 二爷翻墙https://1808.cf 节点_13
+      - 二爷翻墙https://1808.cf 节点_14
+      - 二爷翻墙https://1808.cf 节点_15
+      - 二爷翻墙https://1808.cf 节点_16
+      - 二爷翻墙https://1808.cf 节点_17
+      - 二爷翻墙https://1808.cf 节点_18
+      - 二爷翻墙https://1808.cf 节点_19
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     tolerance: 50
     proxies:
-      - 二爷翻墙 节点_1
-      - 二爷翻墙 节点_2
-      - 二爷翻墙 节点_3
-      - 二爷翻墙 节点_4
-      - 二爷翻墙 节点_5
-      - 二爷翻墙 节点_6
-      - 二爷翻墙 节点_7
-      - 二爷翻墙 节点_8
-      - 二爷翻墙 节点_9
-      - 二爷翻墙 节点_10
-      - 二爷翻墙 节点_11
-      - 二爷翻墙 节点_12
-      - 二爷翻墙 节点_13
-      - 二爷翻墙 节点_14
-      - 二爷翻墙 节点_15
-      - 二爷翻墙 节点_16
-      - 二爷翻墙 节点_17
-      - 二爷翻墙 节点_18
-      - 二爷翻墙 节点_19
+      - 二爷翻墙https://1808.cf 节点_1
+      - 二爷翻墙https://1808.cf 节点_2
+      - 二爷翻墙https://1808.cf 节点_3
+      - 二爷翻墙https://1808.cf 节点_4
+      - 二爷翻墙https://1808.cf 节点_5
+      - 二爷翻墙https://1808.cf 节点_6
+      - 二爷翻墙https://1808.cf 节点_7
+      - 二爷翻墙https://1808.cf 节点_8
+      - 二爷翻墙https://1808.cf 节点_9
+      - 二爷翻墙https://1808.cf 节点_10
+      - 二爷翻墙https://1808.cf 节点_11
+      - 二爷翻墙https://1808.cf 节点_12
+      - 二爷翻墙https://1808.cf 节点_13
+      - 二爷翻墙https://1808.cf 节点_14
+      - 二爷翻墙https://1808.cf 节点_15
+      - 二爷翻墙https://1808.cf 节点_16
+      - 二爷翻墙https://1808.cf 节点_17
+      - 二爷翻墙https://1808.cf 节点_18
+      - 二爷翻墙https://1808.cf 节点_19
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🚀 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 二爷翻墙 节点_1
-      - 二爷翻墙 节点_2
-      - 二爷翻墙 节点_3
-      - 二爷翻墙 节点_4
-      - 二爷翻墙 节点_5
-      - 二爷翻墙 节点_6
-      - 二爷翻墙 节点_7
-      - 二爷翻墙 节点_8
-      - 二爷翻墙 节点_9
-      - 二爷翻墙 节点_10
-      - 二爷翻墙 节点_11
-      - 二爷翻墙 节点_12
-      - 二爷翻墙 节点_13
-      - 二爷翻墙 节点_14
-      - 二爷翻墙 节点_15
-      - 二爷翻墙 节点_16
-      - 二爷翻墙 节点_17
-      - 二爷翻墙 节点_18
-      - 二爷翻墙 节点_19
+      - 二爷翻墙https://1808.cf 节点_1
+      - 二爷翻墙https://1808.cf 节点_2
+      - 二爷翻墙https://1808.cf 节点_3
+      - 二爷翻墙https://1808.cf 节点_4
+      - 二爷翻墙https://1808.cf 节点_5
+      - 二爷翻墙https://1808.cf 节点_6
+      - 二爷翻墙https://1808.cf 节点_7
+      - 二爷翻墙https://1808.cf 节点_8
+      - 二爷翻墙https://1808.cf 节点_9
+      - 二爷翻墙https://1808.cf 节点_10
+      - 二爷翻墙https://1808.cf 节点_11
+      - 二爷翻墙https://1808.cf 节点_12
+      - 二爷翻墙https://1808.cf 节点_13
+      - 二爷翻墙https://1808.cf 节点_14
+      - 二爷翻墙https://1808.cf 节点_15
+      - 二爷翻墙https://1808.cf 节点_16
+      - 二爷翻墙https://1808.cf 节点_17
+      - 二爷翻墙https://1808.cf 节点_18
+      - 二爷翻墙https://1808.cf 节点_19
   - name: 📲 电报信息
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
-      - 二爷翻墙 节点_1
-      - 二爷翻墙 节点_2
-      - 二爷翻墙 节点_3
-      - 二爷翻墙 节点_4
-      - 二爷翻墙 节点_5
-      - 二爷翻墙 节点_6
-      - 二爷翻墙 节点_7
-      - 二爷翻墙 节点_8
-      - 二爷翻墙 节点_9
-      - 二爷翻墙 节点_10
-      - 二爷翻墙 节点_11
-      - 二爷翻墙 节点_12
-      - 二爷翻墙 节点_13
-      - 二爷翻墙 节点_14
-      - 二爷翻墙 节点_15
-      - 二爷翻墙 节点_16
-      - 二爷翻墙 节点_17
-      - 二爷翻墙 节点_18
-      - 二爷翻墙 节点_19
+      - 二爷翻墙https://1808.cf 节点_1
+      - 二爷翻墙https://1808.cf 节点_2
+      - 二爷翻墙https://1808.cf 节点_3
+      - 二爷翻墙https://1808.cf 节点_4
+      - 二爷翻墙https://1808.cf 节点_5
+      - 二爷翻墙https://1808.cf 节点_6
+      - 二爷翻墙https://1808.cf 节点_7
+      - 二爷翻墙https://1808.cf 节点_8
+      - 二爷翻墙https://1808.cf 节点_9
+      - 二爷翻墙https://1808.cf 节点_10
+      - 二爷翻墙https://1808.cf 节点_11
+      - 二爷翻墙https://1808.cf 节点_12
+      - 二爷翻墙https://1808.cf 节点_13
+      - 二爷翻墙https://1808.cf 节点_14
+      - 二爷翻墙https://1808.cf 节点_15
+      - 二爷翻墙https://1808.cf 节点_16
+      - 二爷翻墙https://1808.cf 节点_17
+      - 二爷翻墙https://1808.cf 节点_18
+      - 二爷翻墙https://1808.cf 节点_19
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🚀 节点选择
-      - 二爷翻墙 节点_1
-      - 二爷翻墙 节点_2
-      - 二爷翻墙 节点_3
-      - 二爷翻墙 节点_4
-      - 二爷翻墙 节点_5
-      - 二爷翻墙 节点_6
-      - 二爷翻墙 节点_7
-      - 二爷翻墙 节点_8
-      - 二爷翻墙 节点_9
-      - 二爷翻墙 节点_10
-      - 二爷翻墙 节点_11
-      - 二爷翻墙 节点_12
-      - 二爷翻墙 节点_13
-      - 二爷翻墙 节点_14
-      - 二爷翻墙 节点_15
-      - 二爷翻墙 节点_16
-      - 二爷翻墙 节点_17
-      - 二爷翻墙 节点_18
-      - 二爷翻墙 节点_19
+      - 二爷翻墙https://1808.cf 节点_1
+      - 二爷翻墙https://1808.cf 节点_2
+      - 二爷翻墙https://1808.cf 节点_3
+      - 二爷翻墙https://1808.cf 节点_4
+      - 二爷翻墙https://1808.cf 节点_5
+      - 二爷翻墙https://1808.cf 节点_6
+      - 二爷翻墙https://1808.cf 节点_7
+      - 二爷翻墙https://1808.cf 节点_8
+      - 二爷翻墙https://1808.cf 节点_9
+      - 二爷翻墙https://1808.cf 节点_10
+      - 二爷翻墙https://1808.cf 节点_11
+      - 二爷翻墙https://1808.cf 节点_12
+      - 二爷翻墙https://1808.cf 节点_13
+      - 二爷翻墙https://1808.cf 节点_14
+      - 二爷翻墙https://1808.cf 节点_15
+      - 二爷翻墙https://1808.cf 节点_16
+      - 二爷翻墙https://1808.cf 节点_17
+      - 二爷翻墙https://1808.cf 节点_18
+      - 二爷翻墙https://1808.cf 节点_19
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
-      - 二爷翻墙 节点_1
-      - 二爷翻墙 节点_2
-      - 二爷翻墙 节点_3
-      - 二爷翻墙 节点_4
-      - 二爷翻墙 节点_5
-      - 二爷翻墙 节点_6
-      - 二爷翻墙 节点_7
-      - 二爷翻墙 节点_8
-      - 二爷翻墙 节点_9
-      - 二爷翻墙 节点_10
-      - 二爷翻墙 节点_11
-      - 二爷翻墙 节点_12
-      - 二爷翻墙 节点_13
-      - 二爷翻墙 节点_14
-      - 二爷翻墙 节点_15
-      - 二爷翻墙 节点_16
-      - 二爷翻墙 节点_17
-      - 二爷翻墙 节点_18
-      - 二爷翻墙 节点_19
+      - 二爷翻墙https://1808.cf 节点_1
+      - 二爷翻墙https://1808.cf 节点_2
+      - 二爷翻墙https://1808.cf 节点_3
+      - 二爷翻墙https://1808.cf 节点_4
+      - 二爷翻墙https://1808.cf 节点_5
+      - 二爷翻墙https://1808.cf 节点_6
+      - 二爷翻墙https://1808.cf 节点_7
+      - 二爷翻墙https://1808.cf 节点_8
+      - 二爷翻墙https://1808.cf 节点_9
+      - 二爷翻墙https://1808.cf 节点_10
+      - 二爷翻墙https://1808.cf 节点_11
+      - 二爷翻墙https://1808.cf 节点_12
+      - 二爷翻墙https://1808.cf 节点_13
+      - 二爷翻墙https://1808.cf 节点_14
+      - 二爷翻墙https://1808.cf 节点_15
+      - 二爷翻墙https://1808.cf 节点_16
+      - 二爷翻墙https://1808.cf 节点_17
+      - 二爷翻墙https://1808.cf 节点_18
+      - 二爷翻墙https://1808.cf 节点_19
   - name: 📢 谷歌FCM
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 二爷翻墙 节点_1
-      - 二爷翻墙 节点_2
-      - 二爷翻墙 节点_3
-      - 二爷翻墙 节点_4
-      - 二爷翻墙 节点_5
-      - 二爷翻墙 节点_6
-      - 二爷翻墙 节点_7
-      - 二爷翻墙 节点_8
-      - 二爷翻墙 节点_9
-      - 二爷翻墙 节点_10
-      - 二爷翻墙 节点_11
-      - 二爷翻墙 节点_12
-      - 二爷翻墙 节点_13
-      - 二爷翻墙 节点_14
-      - 二爷翻墙 节点_15
-      - 二爷翻墙 节点_16
-      - 二爷翻墙 节点_17
-      - 二爷翻墙 节点_18
-      - 二爷翻墙 节点_19
+      - 二爷翻墙https://1808.cf 节点_1
+      - 二爷翻墙https://1808.cf 节点_2
+      - 二爷翻墙https://1808.cf 节点_3
+      - 二爷翻墙https://1808.cf 节点_4
+      - 二爷翻墙https://1808.cf 节点_5
+      - 二爷翻墙https://1808.cf 节点_6
+      - 二爷翻墙https://1808.cf 节点_7
+      - 二爷翻墙https://1808.cf 节点_8
+      - 二爷翻墙https://1808.cf 节点_9
+      - 二爷翻墙https://1808.cf 节点_10
+      - 二爷翻墙https://1808.cf 节点_11
+      - 二爷翻墙https://1808.cf 节点_12
+      - 二爷翻墙https://1808.cf 节点_13
+      - 二爷翻墙https://1808.cf 节点_14
+      - 二爷翻墙https://1808.cf 节点_15
+      - 二爷翻墙https://1808.cf 节点_16
+      - 二爷翻墙https://1808.cf 节点_17
+      - 二爷翻墙https://1808.cf 节点_18
+      - 二爷翻墙https://1808.cf 节点_19
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -218,25 +218,25 @@ proxy-groups:
       - 🚀 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 二爷翻墙 节点_1
-      - 二爷翻墙 节点_2
-      - 二爷翻墙 节点_3
-      - 二爷翻墙 节点_4
-      - 二爷翻墙 节点_5
-      - 二爷翻墙 节点_6
-      - 二爷翻墙 节点_7
-      - 二爷翻墙 节点_8
-      - 二爷翻墙 节点_9
-      - 二爷翻墙 节点_10
-      - 二爷翻墙 节点_11
-      - 二爷翻墙 节点_12
-      - 二爷翻墙 节点_13
-      - 二爷翻墙 节点_14
-      - 二爷翻墙 节点_15
-      - 二爷翻墙 节点_16
-      - 二爷翻墙 节点_17
-      - 二爷翻墙 节点_18
-      - 二爷翻墙 节点_19
+      - 二爷翻墙https://1808.cf 节点_1
+      - 二爷翻墙https://1808.cf 节点_2
+      - 二爷翻墙https://1808.cf 节点_3
+      - 二爷翻墙https://1808.cf 节点_4
+      - 二爷翻墙https://1808.cf 节点_5
+      - 二爷翻墙https://1808.cf 节点_6
+      - 二爷翻墙https://1808.cf 节点_7
+      - 二爷翻墙https://1808.cf 节点_8
+      - 二爷翻墙https://1808.cf 节点_9
+      - 二爷翻墙https://1808.cf 节点_10
+      - 二爷翻墙https://1808.cf 节点_11
+      - 二爷翻墙https://1808.cf 节点_12
+      - 二爷翻墙https://1808.cf 节点_13
+      - 二爷翻墙https://1808.cf 节点_14
+      - 二爷翻墙https://1808.cf 节点_15
+      - 二爷翻墙https://1808.cf 节点_16
+      - 二爷翻墙https://1808.cf 节点_17
+      - 二爷翻墙https://1808.cf 节点_18
+      - 二爷翻墙https://1808.cf 节点_19
 rules:
  - DOMAIN-SUFFIX,acl4.ssr,🎯 全球直连
  - DOMAIN-SUFFIX,ip6-localhost,🎯 全球直连
