--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,66 +6,197 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本
-    type: ss
-    server: free.themars.top
-    port: 32102
-    password: b89b39c2-dc8d-4595-a4c5-54b4fbab3fc2
-    cipher: chacha20-ietf-poly1305
-  - &id002
-    name: 🇨🇦_CA_加拿大
-    type: ss
-    server: 134.195.196.149
-    port: 3306
-    password: Y6R9pAtvxxzmGC
-    cipher: aes-256-gcm
-  - &id003
-    name: 🇺🇸_US_美国_1
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国
     type: vmess
-    server: 137.175.61.130
-    port: 46679
+    server: 120.226.50.68
+    port: 34214
     cipher: auto
     uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
     alterId: 64
     tls: false
     skip-cert-verify: true
-  - &id004
+    network: tcp
+  - &id002
+    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾
+    type: ss
+    server: 14.29.124.168
+    port: 24001
+    password: QazEdcTgb159@$*
+    cipher: aes-128-cfb
+  - &id003
     name: 🇰🇷_KR_韩国_1
-    type: ss
-    server: 43.202.49.224
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id005
-    name: 🇰🇷_KR_韩国_2
-    type: ss
-    server: 43.200.1.53
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id006
-    name: 🇰🇷_KR_韩国_3
-    type: ss
-    server: 43.202.46.135
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id007
-    name: 🇰🇷_KR_韩国_4
-    type: ss
-    server: 43.202.45.84
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id008
-    name: 🇰🇷_KR_韩国_5
     type: ss
     server: 43.200.7.118
     port: 443
     password: amazonskr05
     cipher: aes-256-cfb
+  - &id004
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: 137.175.29.38
+    port: 53986
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id005
+    name: 🇰🇷_KR_韩国_2
+    type: ss
+    server: 43.202.52.108
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id006
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国
+    type: vmess
+    server: cdn.ikuan.dev
+    port: 2052
+    cipher: auto
+    uuid: 3185c2f3-4246-49c4-ba8a-5ea8fb2ef6b8
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /FreeForGFW
+      headers:
+        host: freeforgfw.ikuan.dev
+  - &id007
+    name: 🇺🇸_US_美国_2
+    type: trojan
+    server: 148.59.74.52
+    port: 443
+    udp: true
+    password: 41bec492-cd79-4b57-9a15-7d2bb00fcfca
+    sni: 18-140-66-207.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id008
+    name: 🇰🇷_KR_韩国_3
+    type: ss
+    server: 43.202.49.224
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
   - &id009
+    name: 🇰🇷_KR_韩国_4
+    type: ss
+    server: 43.202.46.135
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id010
     name: 🇨🇳_CN_中国_1
+    type: vmess
+    server: 36.133.171.209
+    port: 11023
+    cipher: auto
+    uuid: 8c042a38-71c1-1dcb-00df-54880236e0dc
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+  - &id011
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: usg.fljsm.com
+    port: 443
+    cipher: auto
+    uuid: e5543efd-5400-3760-9bb6-02767728e888
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /video
+      headers:
+        host: usg.fljsm.com
+  - &id012
+    name: 🇮🇱_IL_以色列->🇭🇰_HK_香港
+    type: trojan
+    server: hk1.chuqiangtou.net
+    port: 4003
+    udp: true
+    password: TJCfE7Mx2YcA8kX8zg
+    skip-cert-verify: true
+    network: tcp
+  - &id013
+    name: 🇺🇦_UA_乌克兰->🇩🇪_DE_德国
+    type: vmess
+    server: dearmb.76898102.xyz
+    port: 2052
+    cipher: auto
+    uuid: d264f990-a6a5-3832-bf37-1fccaed298dd
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /ancihgrt
+      headers:
+        host: dearmb.76898102.xyz
+  - &id014
+    name: 🇨🇳_CN_中国_2
+    type: ss
+    server: 36.137.106.45
+    port: 11023
+    password: ll668668@
+    cipher: aes-256-gcm
+  - &id015
+    name: 🇨🇾_CY_塞浦路斯->🇬🇧_GB_英国
+    type: vmess
+    server: freenodecdn.ikuan.dev
+    port: 2052
+    cipher: auto
+    uuid: 3185c2f3-4246-49c4-ba8a-5ea8fb2ef6b8
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /FreeForGFW
+      headers:
+        host: freeforgfw.ikuan.dev
+  - &id016
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: bb.hk1997.pro
+    port: 443
+    cipher: auto
+    uuid: 0fa2f4ff-d1c3-47b2-8b05-8b7e4916c290
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /jash-weh-peft-pseb-lous-jass
+      headers:
+        host: bb.hk1997.pro
+  - &id017
+    name: 🇨🇳_CN_中国_3
+    type: ss
+    server: 36.139.166.252
+    port: 11023
+    password: ll668668@
+    cipher: aes-256-gcm
+  - &id018
+    name: 🇯🇵_JP_日本
+    type: vmess
+    server: oci.donpau.com
+    port: 443
+    cipher: auto
+    uuid: 3C02DC15-56AE-7889-8936-9A2EA8FF8666
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: oci.donpau.com
+  - &id019
+    name: 🇨🇳_CN_中国_4
     type: vmess
     server: 112.132.215.189
     port: 50002
@@ -75,173 +206,31 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id010
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 107.167.7.12
-    port: 41654
-    cipher: auto
-    uuid: bdee202c-8fae-441f-a588-7bc4d3887019
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id011
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 23.224.9.146
-    port: 48729
-    cipher: auto
-    uuid: bb25859e-f6da-4101-989f-b4dd67a22682
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id012
-    name: 🇰🇷_KR_韩国_6
+  - &id020
+    name: 🇸🇬_SG_新加坡
     type: ss
-    server: 43.201.251.42
-    port: 443
-    password: amazonskr05
+    server: 103.172.116.79
+    port: 9044
+    password: KBGjZYcy4SyRShmA
     cipher: aes-256-cfb
-  - &id013
-    name: 🇨🇳_CN_中国_2
+  - &id021
+    name: 🇮🇷_IR_伊朗->🇹🇷_TR_土耳其
+    type: vmess
+    server: turkey.abraak.site
+    port: 2087
+    cipher: auto
+    uuid: 21025839-c140-4c67-8f4c-9a413ca8de3f
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id022
+    name: 🇨🇳_CN_中国_5
     type: ss
     server: 36.137.106.115
     port: 11023
     password: ll668668@
     cipher: aes-256-gcm
-  - &id014
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国
-    type: vmess
-    server: 120.226.50.68
-    port: 48767
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    servername: cr3.biger.club
-    network: tcp
-  - &id015
-    name: 🇯🇵_JP_日本_1
-    type: ss
-    server: 54.64.76.95
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id016
-    name: 🇯🇵_JP_日本_2
-    type: ssr
-    server: jp-am48-6.eqnode.net
-    port: 8081
-    password: eAokbaDN6
-    cipher: aes-256-cfb
-    obfs: tls1.2_ticket_auth
-    protocol: origin
-  - &id017
-    name: 🇸🇬_SG_新加坡
-    type: ssr
-    server: sg-am3.eqsunshine.com
-    port: 32001
-    password: 3g0dHlKME
-    cipher: aes-256-cfb
-    obfs: tls1.2_ticket_auth
-    protocol: origin
-  - &id018
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 137.175.69.234
-    port: 44920
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id019
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: 137.175.52.18
-    port: 33002
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id020
-    name: 🇭🇰_HK_香港
-    type: trojan
-    server: awshk5-tg-data.amazonwebservicess.com
-    port: 443
-    udp: true
-    password: ca7febc2-bb45-4e6d-810e-ab0af6009c4e
-    skip-cert-verify: true
-    network: tcp
-  - &id021
-    name: 🇨🇳_CN_中国_3
-    type: vmess
-    server: 36.133.171.209
-    port: 11023
-    cipher: auto
-    uuid: 8c042a38-71c1-1dcb-00df-54880236e0dc
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-  - &id022
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 142.4.126.76
-    port: 31002
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id023
-    name: 🇨🇳_CN_中国_4
-    type: ss
-    server: 36.138.193.128
-    port: 11023
-    password: ll668668@
-    cipher: aes-256-gcm
-  - &id024
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡
-    type: ss
-    server: free.themars.top
-    port: 32103
-    password: b89b39c2-dc8d-4595-a4c5-54b4fbab3fc2
-    cipher: chacha20-ietf-poly1305
-  - &id025
-    name: 🇫🇷_FR_法国
-    type: ssr
-    server: fr-am1-5.eqsunshine.com
-    port: 8181
-    password: RcfVcDzzB
-    cipher: aes-256-cfb
-    obfs: tls1.2_ticket_auth
-    protocol: origin
-  - &id026
-    name: 🇮🇳_IN_印度
-    type: ssr
-    server: z0114.security-cloudfront-cdn.com
-    port: 42833
-    password: YpX2opBbrfqJzzMs
-    cipher: aes-256-cfb
-    obfs: http_simple
-    protocol: origin
-  - &id027
-    name: 🇻🇳_VN_越南
-    type: trojan
-    server: vn2.microsoft-orgwly.vip
-    port: 443
-    udp: true
-    password: fcf74125-99de-4df3-af94-552a0b1ee021
-    sni: tls.microsoft-orgwly.vip
-    skip-cert-verify: true
-    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -290,11 +279,6 @@ proxy-groups:
       - *id020
       - *id021
       - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -322,11 +306,6 @@ proxy-groups:
       - *id020
       - *id021
       - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
   - name: SELECT
     type: select
     proxies:
@@ -352,11 +331,6 @@ proxy-groups:
       - *id020
       - *id021
       - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
